syntax = "proto3";

package proto;
import "proto.proto";

service connect {
	rpc pushMessage (PushMessageReq) returns (EmptyReply);
	rpc batchMessage (BatchMessageReq) returns (EmptyReply);

	rpc pushContact (PushContactReq) returns (EmptyReply);


}

message PushMessageReq {
	int64 Uid = 1;
	string Content = 2;
}


message BatchMessageReq {
	repeated int64 uid = 1;
	string Content = 2;
}

message PushContactReq {
	int64 uid = 1;
	string content = 2;
}

